# turing-vessel

./: .env.example  .gitignore  DOCUMENTACAO.md  Makefile  README.md  docker-compose.yml  init_dirs.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 89800fef629d_ignicao_estrutural_tabelas.py
src/: main.py
src/application/: game_loop.py  perception.py  state_manager.py  uow.py
src/domain/: entities.py  repositories.py  services.py
src/infrastructure/: llm_client.py
src/infrastructure/database/: models.py  repositories.py
src/interfaces/cli/: tui.py
tests/: test_application.py  test_domain.py  test_infrastructure.py  test_sanity.py
tests/acceptance/: affective_engine.feature  sanity.feature  test_acceptance.py  test_affective_engine.py
